# waffles

./: .gitignore  .readthedocs.yaml  README.md  environment.yaml  requirements.txt  setup.py  variables.py
data/: ProtoDUNE_HD_APA_maps.py
docs/: 10_Intro.md  1_Intro.md  20_Scripts.md  2_Scripts.md  30_Libraries.rst  31_data_classes.rst  32_input.rst  33_np04.rst  34_plotting.rst  35_utils.rst  3_Libraries.rst  Waveform.rst  WaveformAdcs.rst  WaveformSet.rst  WfAna.rst  WfAnaResult.rst  WfPeak.rst  analysis_requirements.txt  conf.py  docs_requirements.txt  index.rst  requirements.txt
docs/examples/: 00_CheckData.ipynb  00_CheckData_apa3.json  00_CheckData_apa4.json  01_Calibration.ipynb  01_Calibration_apa3.json  01_Heatmap_apa3.json  4_Examples.rst  ProtoDUNE_HD_APA_maps.py  drawing_tools_example.py  drawing_tools_example_beam.py  drawing_tools_example_np02.py
scripts/: 00_HDF5toROOT.py  00_HDF5toROOT.sh  01_Process.py  02_RawAna.py  03_Charge.py  04_RawHDF5Reader.py  05_Filter.py  06_RawHDF5Reader.py  07_save_structured_from_config.py  08_np02vd_run_downloader_processor.py  090_Lnoisehunt_randomtrig_nofullstream.py  090_membLnoisehunt_randomtrig_nofullstream.py  091_cathodeLnoisehunt_prebeamtrig_fullstream.py  09_noisehunt_structured.py  10_avg_wfms_membrane_selftrig.py  10_avg_wfms_structured.py  11_self_compensating_validation.py  CMakeLists.txt  HDF5LIBS_duplications.cpp  HDF5LIBS_test.cpp  HDF5toROOT_decoder.cpp  README.md  ch20_avg_spe_waveform.txt  ch30_avg_spe_waveform.txt  check_snr.ipynb  compile_decoder.sh  config.json  create_analysis_minimal_structure.sh  create_filelist.sh  fetch_rucio_replicas.py  get_protodunehd_files.sh  get_rucio.py  run_display.sh  setup_ifdhc.sh  setup_rucio.sh  setup_rucio_a9.sh  setup_rucio_container.sh  setup_rucio_s7.sh
scripts/cpp_utils/: HDF5LIBS_duplications.cpp  HDF5toROOT_decoder.cpp  HDF5toROOT_decoder_acv.cpp  README.md  compile_decoder.sh  plotsAPA.C
scripts/cpp_utils/functions/: hdf5torootclass.h
scripts/macros/: plotsAPA.C
src/waffles/: APAMap.py  CalibrationHistogram.py  (+18 more)
test/: README.md  hdf5_to_hdf5_converter.py  hdf5_to_several_converter.py  wtest_hdf5_reader.py  wtest_hdf5_reader_2.py  wtest_hdf5_reader_writer.py
(+301 files in other folders)
